Finalized Swagger Documentation
