# swagger.json
@@ -31,7 +31,7 @@
           "description": "Deletes all doctors from the database",
           "responses": {
             "200": {
-              "description": "The empty list of doctors after deletion",
+              "description": "The list of doctors that were deleted",
               "schema": {
                 "type": "array",
                 "items": {
@@ -128,6 +128,21 @@
               }
             }
           }
+        },
+        "delete": {
+          "summary": "Delete all Patients",
+          "description": "Deletes all patients from the database",
+          "responses": {
+            "200": {
+              "description": "The empty list of patients after deletion",
+              "schema": {
+                "type": "array",
+                "items": {
+                  "$ref": "#/definitions/Patient"
+                }
+              }
+            }
+          }
         }
       },
       "/patient": {
@@ -176,6 +191,29 @@
               }
             }
           }
+        },
+        "delete": {
+          "parameters": [
+            {
+              "name": "id",
+              "in": "path",
+              "type": "integer",
+              "required": true
+            }
+          ],
+          "summary": "Delete a single patient",
+          "description": "Delete patient by id",
+          "responses": {
+            "200": {
+              "description": "Remaining Patients",
+              "schema": {
+                "type": "array",
+                "items": {
+                  "$ref": "#/definitions/Patient"
+                }
+              }
+            }
+          }
         }
       },
       "/visits": {
@@ -214,6 +252,109 @@
                 "type": "array",
                 "items": {
                   "$ref": "#/definitions/Visit"
+                }
+              }
+            }
+          }
+        }
+      },
+      "/hospital/all": {
+        "get": {
+          "summary": "Get all hospitals",
+          "description": "Retrieves the list of hospitals",
+          "responses": {
+            "200": {
+              "description": "The list of hospitals",
+              "schema": {
+                "type": "array",
+                "items": {
+                  "$ref": "#/definitions/Hospital"
+                }
+              }
+            }
+          }
+        },
+        "delete": {
+          "summary": "Delete all hospitals",
+          "description": "Deletes all hospitals from the database",
+          "responses": {
+            "200": {
+              "description": "The empty list of hospitals after deletion",
+              "schema": {
+                "type": "array",
+                "items": {
+                  "$ref": "#/definitions/Hospital"
+                }
+              }
+            }
+          }
+        }
+      },
+      "/hospital": {
+        "post": {
+          "summary": "Create a hospital",
+          "parameters": [
+            {
+              "name": "hospital",
+              "in": "body",
+              "schema": {
+                "$ref": "#/definitions/NewHospital"
+              }
+            }
+          ],
+          "description": "Creates a single hospital",
+          "consumes": [
+            "application/json"
+          ],
+          "responses": {
+            "201": {
+              "description": "The newly created hospital",
+              "schema": {
+                "$ref": "#/definitions/Hospital"
+              }
+            }
+          }
+        }
+      },
+      "/hospital/{id}": {
+        "get": {
+          "parameters": [
+            {
+              "name": "id",
+              "in": "path",
+              "type": "integer",
+              "required": true
+            }
+          ],
+          "summary": "Get single hospital",
+          "description": "Get hospital by id",
+          "responses": {
+            "200": {
+              "description": "Single hospital",
+              "schema": {
+                "$ref": "#/definitions/Hospital"
+              }
+            }
+          }
+        },
+        "delete": {
+          "parameters": [
+            {
+              "name": "id",
+              "in": "path",
+              "type": "integer",
+              "required": true
+            }
+          ],
+          "summary": "Delete a single hospital",
+          "description": "Delete hospital by id",
+          "responses": {
+            "200": {
+              "description": "Remaining hospital",
+              "schema": {
+                "type": "array",
+                "items": {
+                  "$ref": "#/definitions/Hospital"
                 }
               }
             }
@@ -271,6 +412,75 @@
           },
           "date": {
             "type": "string"
+          }
+        }
+      },
+      "Hospital": {
+        "type": "object",
+        "properties": {
+          "Id": {
+            "type": "integer"
+          },
+          "doctors": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "integer"
+                },
+                "name": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "patients": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "integer"
+                },
+                "name": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      },
+      "NewHospital": {
+        "type": "object",
+        "properties": {
+          "doctors": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "integer"
+                },
+                "name": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "patients": {
+            "type": "array",
+            "items": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "integer"
+                },
+                "name": {
+                  "type": "string"
+                }
+              }
+            }
           }
         }
       }
